添加了幽影和血肉的指南书背景